// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SessionResultPageComponent > should snap when previewing results 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading="false"
  isFeedbackSessionDetailsLoading="false"
  isFeedbackSessionResultsLoading="false"
  isPreviewHintExpanded="false"
  key=""
  logService={[Function _LogService]}
  loggedInUser=""
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail={[Function String]}
  personName={[Function String]}
  previewAs={[Function String]}
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="bg-light"
  >
    <div
      class="col-12 text-center text-break"
    >
      <h4>
         Previewing Session Results as 
        <span>
          student
        </span>
         Alice2 (alice2@tmt.tmt) 
        <button
          class="btn btn-link no-shadow"
          type="button"
        >
          [more]
        </button>
      </h4>
    </div>
  </div><div
    class="card card-plain mt-3"
  >
    <div
      class="card-body"
    >
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Course ID:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="course-id"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Session:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="session-name"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Opening time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="opening-time"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Closing time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="closing-time"
        >
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="mt-4"
      >
        <div
          class="alert alert-primary d-flex align-items-center justify-content-center"
          role="alert"
          style="background-color: #d1ecf1;"
        >
           Nothing to show. There are no questions relevant to you to view in this session. 
        </div>
      </div>
      <tm-question-response-panel>
      </tm-question-response-panel>
    </div>
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent > should snap when session results failed to load 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed={[Function Boolean]}
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading="false"
  isFeedbackSessionDetailsLoading="false"
  isFeedbackSessionResultsLoading="false"
  isPreviewHintExpanded="false"
  key={[Function String]}
  logService={[Function _LogService]}
  loggedInUser=""
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  previewAs=""
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            log in using your account email
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><div
    class="card card-plain mt-3"
  >
    <div
      class="card-body"
    >
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Course ID:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="course-id"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Session:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="session-name"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Opening time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="opening-time"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Closing time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="closing-time"
        >
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load results
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry 
      </button>
    </div>
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent > should snap with an open feedback session with no questions 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading="false"
  isFeedbackSessionDetailsLoading="false"
  isFeedbackSessionResultsLoading="false"
  isPreviewHintExpanded="false"
  key={[Function String]}
  logService={[Function _LogService]}
  loggedInUser=""
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  previewAs=""
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            log in using your account email
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><div
    class="card card-plain mt-3"
  >
    <div
      class="card-body"
    >
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Course ID:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="course-id"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Session:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="session-name"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Opening time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="opening-time"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Closing time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="closing-time"
        >
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="mt-4"
      >
        <div
          class="alert alert-primary d-flex align-items-center justify-content-center"
          role="alert"
          style="background-color: #d1ecf1;"
        >
           Nothing to show. There are no questions relevant to you to view in this session. 
        </div>
      </div>
      <tm-question-response-panel>
      </tm-question-response-panel>
    </div>
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent > should snap with default fields 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading="false"
  isFeedbackSessionDetailsLoading="false"
  isFeedbackSessionResultsLoading="false"
  isPreviewHintExpanded="false"
  key={[Function String]}
  logService={[Function _LogService]}
  loggedInUser=""
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  previewAs=""
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            log in using your account email
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><div
    class="card card-plain mt-3"
  >
    <div
      class="card-body"
    >
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Course ID:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="course-id"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Session:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="session-name"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Opening time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="opening-time"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Closing time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="closing-time"
        >
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="mt-4"
      >
        <div
          class="alert alert-primary d-flex align-items-center justify-content-center"
          role="alert"
          style="background-color: #d1ecf1;"
        >
           Nothing to show. There are no questions relevant to you to view in this session. 
        </div>
      </div>
      <tm-question-response-panel>
      </tm-question-response-panel>
    </div>
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent > should snap with session details and results are loading 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading={[Function Boolean]}
  isFeedbackSessionDetailsLoading={[Function Boolean]}
  isFeedbackSessionResultsLoading={[Function Boolean]}
  isPreviewHintExpanded="false"
  key={[Function String]}
  logService={[Function _LogService]}
  loggedInUser=""
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  previewAs=""
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            log in using your account email
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent > should snap with session details loaded and results are loading 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading="false"
  isFeedbackSessionDetailsLoading="false"
  isFeedbackSessionResultsLoading={[Function Boolean]}
  isPreviewHintExpanded="false"
  key={[Function String]}
  logService={[Function _LogService]}
  loggedInUser=""
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName=""
  previewAs=""
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <div>
           You are viewing feedback results as . You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            log in using your account email
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><div
    class="card card-plain mt-3"
  >
    <div
      class="card-body"
    >
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Course ID:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="course-id"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Session:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="session-name"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Opening time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="opening-time"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Closing time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="closing-time"
        >
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent > should snap with user that is logged in and using session link 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading="false"
  isFeedbackSessionDetailsLoading="false"
  isFeedbackSessionResultsLoading="false"
  isPreviewHintExpanded="false"
  key={[Function String]}
  logService={[Function _LogService]}
  loggedInUser={[Function String]}
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName={[Function String]}
  previewAs=""
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <div>
           You are viewing feedback results as alice. If you wish to link your account email (alice) with this user, 
          <a
            href="#"
            id="join-course-btn"
          >
            click here
          </a>
          . 
        </div>
      </div>
    </div>
  </div><div
    class="card card-plain mt-3"
  >
    <div
      class="card-body"
    >
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Course ID:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="course-id"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Session:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="session-name"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Opening time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="opening-time"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Closing time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="closing-time"
        >
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="mt-4"
      >
        <div
          class="alert alert-primary d-flex align-items-center justify-content-center"
          role="alert"
          style="background-color: #d1ecf1;"
        >
           Nothing to show. There are no questions relevant to you to view in this session. 
        </div>
      </div>
      <tm-question-response-panel>
      </tm-question-response-panel>
    </div>
  </tm-loading-retry>
</tm-session-result-page>
`;

exports[`SessionResultPageComponent > should snap with user that is not logged in and using session link 1`] = `
<tm-session-result-page
  Intent={[Function Object]}
  authService={[Function _AuthService]}
  backendUrl={[Function String]}
  courseId=""
  courseInstitute=""
  courseName=""
  courseService={[Function _CourseService]}
  entityType={[Function String]}
  feedbackSessionId={[Function String]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  formattedSessionClosingTime=""
  formattedSessionOpeningTime=""
  hasFeedbackSessionResultsLoadingFailed="false"
  instructorService={[Function _InstructorService]}
  intent={[Function String]}
  isCourseLoading="false"
  isFeedbackSessionDetailsLoading="false"
  isFeedbackSessionResultsLoading="false"
  isPreviewHintExpanded="false"
  key={[Function String]}
  logService={[Function _LogService]}
  loggedInUser=""
  navigationService={[Function _NavigationService]}
  ngbModal={[Function NgbModal]}
  personEmail=""
  personName={[Function String]}
  previewAs=""
  questions={[Function Array]}
  retryAttempts="undefined"
  session={[Function Object]}
  statusMessageService={[Function _StatusMessageService]}
  studentId=""
  studentService={[Function _StudentService]}
  timezoneService={[Function _TimezoneService]}
  visibilityRecipient={[Function String]}
>
  <h1>
    Feedback Session Results
  </h1><div
    class="row"
  >
    <div
      class="col-12"
    >
      <div
        class="alert alert-primary"
        role="alert"
      >
        <div>
           You are viewing feedback results as alice. You may submit feedback for sessions that are currently open and view results without logging in. To access other features you need to 
          <a
            href="#"
          >
            log in using your account email
          </a>
           (recommended). 
        </div>
      </div>
    </div>
  </div><div
    class="card card-plain mt-3"
  >
    <div
      class="card-body"
    >
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Course ID:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="course-id"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Session:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="session-name"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Opening time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="opening-time"
        >
        </div>
      </div>
      <div
        class="row text-center"
      >
        <label
          class="col-md-2 text-md-end"
        >
          Closing time:
        </label>
        <div
          class="col-md-7 text-md-start"
          id="closing-time"
        >
        </div>
      </div>
    </div>
  </div><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div>
      <div
        class="mt-4"
      >
        <div
          class="alert alert-primary d-flex align-items-center justify-content-center"
          role="alert"
          style="background-color: #d1ecf1;"
        >
           Nothing to show. There are no questions relevant to you to view in this session. 
        </div>
      </div>
      <tm-question-response-panel>
      </tm-question-response-panel>
    </div>
  </tm-loading-retry>
</tm-session-result-page>
`;
